dfir_rs/tests/compile-fail/surface_degenerate_tee.rs
use dfir_rs::dfir_syntax;

fn main() {
    let mut df = dfir_syntax! {
        tee();
    };
    df.run_available();
}
